--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "^0.22.0",
 		"svelte": "^5.0.0",
 		"tailwindcss": "^3.4.17",
 		"vite": "^6.0.0"
